--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    
+    <div> esto lo he añadido desde github</div>
  <div>
     <input type="text" id="num1"  onmouseleave="abrirVentana()" onmousemove="abrirVentana()" >  +  
     <input type="text" id= "num2"> = 
